[gd_scene load_steps=12 format=3 uid="uid://bbs55ujpn1o1k"]

[ext_resource type="Script" path="res://Resource/src/script/story_map.gd" id="1_0osik"]
[ext_resource type="Texture2D" uid="uid://dcg6y2v1w31um" path="res://Resource/res/scene/test_map_001.png" id="2_nkk7t"]
[ext_resource type="Texture2D" uid="uid://bcxd2mym4j6cm" path="res://Resource/res/icon/build/build_di.png" id="3_p7ek0"]
[ext_resource type="Texture2D" uid="uid://djamjubl6ymkh" path="res://Resource/res/icon/build/build_001.png" id="4_8bnuu"]
[ext_resource type="Shader" path="res://Resource/src/shader/fog_mask.gdshader" id="5_se3pj"]
[ext_resource type="Texture2D" uid="uid://1rwsn8nnh8p4" path="res://Resource/res/scene/fog_texture1.png" id="6_2o0cd"]
[ext_resource type="Texture2D" uid="uid://dro0mueodm884" path="res://Resource/res/scene/fog_texture2.png" id="6_pw3rk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m6c52"]
radius = 117.239

[sub_resource type="CircleShape2D" id="CircleShape2D_cc8xh"]
radius = 147.014

[sub_resource type="CircleShape2D" id="CircleShape2D_ktbpy"]
radius = 192.419

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vv8fq"]
shader = ExtResource("5_se3pj")
shader_parameter/circle_data = PackedVector3Array()
shader_parameter/circle_count = 0
shader_parameter/rect_data = null
shader_parameter/rect_count = 0
shader_parameter/fog_color = Color(0, 0, 0, 1)
shader_parameter/texture_scale_1 = Vector2(1, 1)
shader_parameter/texture_scale_2 = Vector2(1, 1)
shader_parameter/speed_1 = 0.02
shader_parameter/speed_2 = 0.03
shader_parameter/direction_1 = Vector2(50, -10)
shader_parameter/direction_2 = Vector2(50, 10)
shader_parameter/blend_ratio = 0.5
shader_parameter/texture_visibility = 0.1
shader_parameter/edge_softness = 20.0
shader_parameter/fog_texture_1 = ExtResource("6_pw3rk")
shader_parameter/fog_texture_2 = ExtResource("6_2o0cd")

[node name="StoryMap" type="Node2D"]
script = ExtResource("1_0osik")

[node name="test_map_001" type="Node2D" parent="."]
position = Vector2(360, 800)

[node name="MapImage" type="Sprite2D" parent="test_map_001"]
texture = ExtResource("2_nkk7t")

[node name="EventLayer" type="Node2D" parent="test_map_001/MapImage"]

[node name="Event_1" type="Area2D" parent="test_map_001/MapImage/EventLayer"]
position = Vector2(241, -180)

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_map_001/MapImage/EventLayer/Event_1"]
shape = SubResource("CircleShape2D_m6c52")

[node name="Node2D" type="Node2D" parent="test_map_001/MapImage/EventLayer/Event_1"]

[node name="build_di" type="Sprite2D" parent="test_map_001/MapImage/EventLayer/Event_1/Node2D"]
texture = ExtResource("3_p7ek0")

[node name="build_icon" type="Sprite2D" parent="test_map_001/MapImage/EventLayer/Event_1/Node2D"]
position = Vector2(-80, 0)
texture = ExtResource("4_8bnuu")

[node name="Event_2" type="Area2D" parent="test_map_001/MapImage/EventLayer"]
position = Vector2(0, 290)

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_map_001/MapImage/EventLayer/Event_2"]
shape = SubResource("CircleShape2D_cc8xh")

[node name="Node2D" type="Node2D" parent="test_map_001/MapImage/EventLayer/Event_2"]

[node name="build_di" type="Sprite2D" parent="test_map_001/MapImage/EventLayer/Event_2/Node2D"]
texture = ExtResource("3_p7ek0")

[node name="build_icon" type="Sprite2D" parent="test_map_001/MapImage/EventLayer/Event_2/Node2D"]
position = Vector2(-80, 0)
texture = ExtResource("4_8bnuu")

[node name="Event_3" type="Area2D" parent="test_map_001/MapImage/EventLayer"]
position = Vector2(-183, -116)

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_map_001/MapImage/EventLayer/Event_3"]
shape = SubResource("CircleShape2D_ktbpy")

[node name="Node2D" type="Node2D" parent="test_map_001/MapImage/EventLayer/Event_3"]

[node name="build_di" type="Sprite2D" parent="test_map_001/MapImage/EventLayer/Event_3/Node2D"]
texture = ExtResource("3_p7ek0")

[node name="build_icon" type="Sprite2D" parent="test_map_001/MapImage/EventLayer/Event_3/Node2D"]
position = Vector2(-80, 0)
texture = ExtResource("4_8bnuu")

[node name="FogLayer" type="ColorRect" parent="test_map_001/MapImage"]
material = SubResource("ShaderMaterial_vv8fq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -685.0
offset_right = -360.0
offset_bottom = -685.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
